Update .gitignore for backend deployment

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Backend Python
+veritas-backend/venv/
+veritas-backend/__pycache__/
+veritas-backend/.env
+*.pyc
+*.pyo
+*.pyd
+
+# Temporary files
+*.tmp
+*.temp
